<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bomberman</string>
    <string name="action_settings">Settings</string>
    <string name="continuegame">Continue</string>
    <string name="createserver">Create Server</string>
    <string name="findserver">Find Server</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="start">Start</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="pause_button">pause</string>
    <string name="bomb_button">bomb</string>
    <string name="quit_button">quit</string>
    <string name="arrow_up">\u028C</string>
    <string name="arrow_down">v</string>
    <string name="arrow_left">\u003C</string>
    <string name="arrow_right">\u003E</string>
    <string name="time_left">Time Left:</string>
    <string name="player_score">Player Score:</string>
    <string name="player_name">Player Name:</string>
    <string name="number_players">Number Players:</string>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bomberman</string>
    <string name="action_settings">Settings</string>
    <string name="continuegame">Continue</string>
    <string name="createserver">Create Server</string>
    <string name="findserver">Find Server</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="start">Start</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="pause_button">pause</string>
    <string name="bomb_button">bomb</string>
    <string name="quit_button">quit</string>
    <string name="arrow_up">\u028C</string>
    <string name="arrow_down">v</string>
    <string name="arrow_left">\u003C</string>
    <string name="arrow_right">\u003E</string>
    <string name="time_left">Time Left:</string>
    <string name="player_score">Player Score:</string>
    <string name="player_name">Player Name:</string>
    <string name="number_players">Number Players:</string>
>>>>>>> 786b4610757b7ec08e2da0ebc6a9c1c5890098da
    <string name="title_activity_create_server">CreateServerActivity</string>
    <string name="title_activity_find_server">FindServerActivity</string>
    <string name="label_servers">Available Servers</string>
    <string name="empty_message">No servers available</string>
    <string name="search_server">Search Servers</string>

<<<<<<< HEAD
</resources>
=======

</resources>
>>>>>>> 786b4610757b7ec08e2da0ebc6a9c1c5890098da
